Modify tasks and add handlers to account for SFTP download failure

--- a/tasks/backup_webapp.yml
+++ b/tasks/backup_webapp.yml
@@ -1,24 +1,33 @@
 ---
 
 - name: Stop Tomcat Instance
-  service: name={{ webapp_name }} state=stopped
+  service:
+    name: "{{ webapp_name }}"
+    state: "stopped"
 
 - name: Find any previously backed-up .war files
-  find: file_type=file paths="/usr/local/{{ webapp_name }}/webapps" patterns="{{ webapp_name }}.war_*"
+  find:
+    file_type: "file"
+    paths: "/usr/local/{{ webapp_name }}/webapps"
+    patterns: "{{ webapp_name }}.war_*"
   register: war_file_backups
 
 - name: Back-up existing .war file
   shell: >
-    mv /usr/local/{{ webapp_name }}/webapps/{{ webapp_name }}.war
+    cp -p /usr/local/{{ webapp_name }}/webapps/{{ webapp_name }}.war
     /usr/local/{{ webapp_name }}/webapps/{{ webapp_name }}.war_`date +%Y%m%d%H%M%S`
     removes=/usr/local/{{ webapp_name }}/webapps/{{ webapp_name }}.war
   register: backup_status
   failed_when: backup_status.rc != 0
 
 - name: Remove any previous .war file back-ups that were found
-  file: path="{{ item.path }}" state=absent
+  file:
+    path: "{{ item.path }}"
+    state: "absent"
   with_items: "{{ war_file_backups.files }}"
   when: war_file_backups is defined
 
 - name: Remove webapp deployment folder
-  file: path=/usr/local/{{ webapp_name }}/webapps/{{ webapp_name }} state=absent
+  file:
+    path: "/usr/local/{{ webapp_name }}/webapps/{{ webapp_name }}"
+    state: "absent"
