Update syntax of tasks to match current standards

--- a/tasks/install_webapp.yml
+++ b/tasks/install_webapp.yml
@@ -12,8 +12,7 @@
   ignore_errors: yes
 
 - name: Handle any SFTP download failures
-  include: handle_failure.yml
-  static: no
+  include_tasks: handle_failure.yml
   when: sftp_status.rc != 0
 
 - name: Set ownership on build artifact
