--- a/tasks/backup_webapp.yml
+++ b/tasks/backup_webapp.yml
@@ -16,7 +16,8 @@
   shell: >
     cp -p /usr/local/{{ webapp_name }}/webapps/{{ webapp_name }}.war
     /usr/local/{{ webapp_name }}/webapps/{{ webapp_name }}.war_`date +%Y%m%d%H%M%S`
-    removes=/usr/local/{{ webapp_name }}/webapps/{{ webapp_name }}.war
+  args:
+    removes: "/usr/local/{{ webapp_name }}/webapps/{{ webapp_name }}.war"
   register: backup_status
   failed_when: backup_status.rc != 0
 
